Optimizacion del codigo

--- a/src/components/auth/style.scss
+++ b/src/components/auth/style.scss
@@ -7,3 +7,10 @@
   align-items: center;
   background-color: blue;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  
+}
